--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '2'
 
 services:
-  sa_courses_db:
-    image: mysql
+  courses-db:
+    image: mysql:5.7.22
     ports:
       - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: arqui
       MYSQL_USER: user
       MYSQL_PASSWORD: arqui
-      MYSQL_DATABASE: sa_courses_ms_development
-      MYSQL_HOST: sa_courses_db
-  sa_courses_ms:
+      MYSQL_DATABASE: courses
+      MYSQL_HOST: courses-db
+  courses-ms:
     build: .
     command: bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4001 -b '0.0.0.0'"
     ports:
       - "4001:4001"
     depends_on:
-      - sa_courses_db
+      - courses-db
